<resources>
    <string name="app_name">ToolbarDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search_title">search</string>
    <string name="navigation_item_1">item1</string>
    <string name="navigation_item_2">item2</string>
    <string name="navigation_subheader">subheader</string>
    <string name="navigation_sub_item_1">sub item1</string>
    <string name="navigation_sub_item_2">sub item 2</string>
    <string name="section_title">section_title</string>
    <string name="favourite">favourite</string>
    <string name="downloaded">download</string>
</resources>
